# ptm_ikit

./: CMakeLists.txt
lab1/: CMakeLists.txt  main.cpp
lab1/include/: Meter.hpp  addWindow.hpp
lab2/: addWindow.cpp  meters.json
lab2/include/: Meter.hpp
ptm_ikit/: CMakeLists.txt  ptm_ikit.cpp  ptm_ikit.h
